syntax = "proto3";

import "common.proto";

package game;

service GameService {
    rpc GetSingleGameInfo(GameInfoRequest) returns (GameInfoBasic);
    rpc GetMultipleGamesInfo(MultipleGamesInfoRequest) returns (MultipleGamesInfoResponse);
    rpc GetGameDetailedInfo(GameInfoRequest) returns (GameInfoDetailed);

    rpc CreateGame(UpdateGameRequest) returns (GameInfoBasic);
    rpc UpdateGame(UpdateGameRequest) returns (GameInfoBasic);
    rpc TagGame(TagGameRequest) returns (GameInfoBasic);
    rpc DeleteGame(DeleteGameRequest) returns (common.Empty);
    
    // TODO: Vote/Comment/Rate a game
}

message UpdateGameRequest {
    optional fixed64 game_id = 1;
    optional string title = 2;
    optional string short_description = 3;
    optional string long_description = 4;
}

message TagGameRequest {
    uint32 tag_id = 1;
    bool set_to = 2;
}

message GameInfoRequest {
    fixed64 game_id = 1;
}

message MultipleGamesInfoRequest {
    repeated fixed64 game_ids = 1;
}

message MultipleGamesInfoResponse {
    repeated GameInfoBasic games_info = 1;
}

message GameInfoBasic {
    fixed64 game_id = 1;
    string title = 2;
    string short_description = 3;
    GameRelease latest_release = 4;
    float average_rating = 5;
    repeated uint32 tags = 6;
}

message GameInfoDetailed {
    GameInfoBasic basic_info = 1;
    string long_description = 2;
    repeated GameRelease releases = 3;
    repeated Author authors = 4;
}

message GameRelease {
    fixed64 release_id = 1;
    bytes checksum = 2;
    string release_name = 3;
}

message Author {
    fixed64 user_id = 1;
}

message DeleteGameRequest {
    fixed64 game_id = 1;
}